--- a/CompactBuffer.Tests/CompactBuffer.Tests.csproj
+++ b/CompactBuffer.Tests/CompactBuffer.Tests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
