--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,10 +1,13 @@
 <Project>
-  <PropertyGroup Condition="$([System.Environment]::GetEnvironmentVariable('UNITY_BUILD')) == '1'">
+
+  <PropertyGroup Condition="$(UNITY_BUILD) == 'true'">
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition="$([System.Environment]::GetEnvironmentVariable('UNITY_BUILD')) != '1'">
+
+  <PropertyGroup Condition="$(UNITY_BUILD) == ''">
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
+
   <PropertyGroup>
     <BaseOutputPath>$(MSBuildThisFileDirectory)\Build\bin\$(MSBuildProjectName)\</BaseOutputPath>
     <BaseIntermediateOutputPath>$(MSBuildThisFileDirectory)\Build\obj\$(MSBuildProjectName)\</BaseIntermediateOutputPath>
@@ -12,4 +15,5 @@
     <IntermediateOutputPath>$(MSBuildThisFileDirectory)\Build\obj\$(MSBuildProjectName)\</IntermediateOutputPath>
     <MSBUildProjectExtensionsPath>$(MSBuildThisFileDirectory)\Build\obj\$(MSBuildProjectName)\</MSBUildProjectExtensionsPath>
   </PropertyGroup>
+
 </Project>
